--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,10 +12,10 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 18
-      - run: cd docs && npm install
-      - run: npm run docs:build
+      - run: cd docs/R-TYPE_Projet && npm install
+      - run: cd docs/R-TYPE_Projet/docs && npm run build
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          publish_dir: docs/.vitepress/dist
+          publish_dir: docs/R-TYPE_Projet/docs/.vitepress/dist
