--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,12 +12,10 @@ jobs:
           node-version: 18
 
       - name: Install dependencies
-        working-directory: docs/
-        run: npm ci
+        run: npm install
 
       - name: Build VitePress site
-        working-directory: docs/
-        run: npm run build
+        run: cd docs && npm run build
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v4
